Fixing overflow:hidden and form elements for scroll trapping.

--- a/demos/trap-scroll-angular4/app/app.component.less
+++ b/demos/trap-scroll-angular4/app/app.component.less
@@ -23,8 +23,21 @@
 	}
 }
 
+.overflower {
+	border: 1px solid #CCCCCC ;
+	height: 30px ;
+	overflow: hidden ;
+}
+
 textarea {
 	font-size: 18px ;
+	margin-bottom: 20px ;
+	width: 300px ;
+}
+
+input {
+	display: block ;
+	margin-bottom: 20px ;
 	width: 300px ;
 }
 
